package thuchanh.CA1_StreamData.feat_singleton;

public interface Listener<T> {
    void update(T data);
}
